# fpbx-tools

./: .gitignore  AGENTS.md  Cargo.toml  README.md
fpbx-backup/: Cargo.toml
fpbx-backup/src/: main.rs
fpbx-backup/src/tui/: app.rs  ui.rs  widgets.rs
fpbx-backup/src/tui/app/: handlers.rs  mod.rs  ssh_config.rs  types.rs  workers.rs
fpbx-core/: Cargo.toml  bundle.rs  db.rs  domain.rs  lib.rs  ssh.rs  verify.rs
fpbx-core/src/: bundle.rs  db.rs  domain.rs  lib.rs  ssh.rs  verify.rs  version.rs  worker.rs
fpbx-core/src/db/: adapt.rs  export.rs  import.rs  mod.rs  uuid_remap.rs
fpbx-info/: Cargo.toml
fpbx-info/src/: main.rs
fpbx-restore/: Cargo.toml
fpbx-restore/src/: main.rs
fpbx-restore/src/tui/: app.rs  ui.rs
fpbx-restore/src/tui/app/: handlers.rs  mod.rs  ssh_config.rs  types.rs  workers.rs
fpbx-routes-xfer/: Cargo.toml
fpbx-routes-xfer/src/: main.rs
fpbx-routes-xfer/src/tui/: app.rs  ui.rs
fpbx-routes-xfer/src/tui/app/: handlers.rs  mod.rs  ssh_config.rs  types.rs  workers.rs
fpbx-tui-shared/: Cargo.toml
fpbx-tui-shared/src/: lib.rs  runner.rs  widgets.rs
