[workspace]
members = [
  "fpbx-core",
  "fpbx-tui-shared",
  "fpbx-backup",
  "fpbx-restore",
  "fpbx-info",
  "fpbx-routes-xfer",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
flate2 = "1.1.9"
hex = "0.4.3"
indicatif = "0.18.4"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
ssh2 = "0.9.5"
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
