[package]
name = "fpbx-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
dirs.workspace = true
fpbx-core = { version = "0.1.0", path = "../fpbx-core" }
fpbx-tui-shared = { version = "0.1.0", path = "../fpbx-tui-shared" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tar.workspace = true
flate2.workspace = true
