[package]
name = "fpbx-routes-xfer"
version = "0.1.0"
edition = "2024"

[dependencies]
fpbx-core = { version = "0.1.0", path = "../fpbx-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
